--- a/templates/parent_temp/parent_home.html
+++ b/templates/parent_temp/parent_home.html
@@ -80,8 +80,8 @@
                         </div>
                     </div>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
-                        </i>Room Booking</a>
+<!--                        <a/> href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">-->
+<!--                        </i>Room Booking</a>-->
                         <div class="dropdown-menu bg-transparent border-0">
 <!--                            <a href="button.html" class="dropdown-item">Add Hostel</a>-->
 <!--                            <a href="{% url 'viewcomplaint' %}" class="dropdown-item">View Complaints</a>-->
