--- a/templates/student_temp/view_profile.html
+++ b/templates/student_temp/view_profile.html
@@ -8,6 +8,8 @@
                             <h6 class="mb-4">Profile</h6>
                              {% for i in profile %}
                     <ul>
+                        <li><img class="rounded-circle me-lg-2" src="{{i.image.url}}" alt="" style="width: 40px; height: 40px;">
+
                         <li>Name: {{i.name}}</li>
                         <li>Address: {{i.address}}</li>
                         <li>Contact_no: {{i.contact_no}}</li>
