--- a/templates/parent_temp/parent_home.html
+++ b/templates/parent_temp/parent_home.html
@@ -46,7 +46,7 @@
         <!-- Sidebar Start -->
         <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-light navbar-light">
-                <a href="index.html" class="navbar-brand mx-4 mb-3">
+                <a href="{% url 'parent_home' %}" class="navbar-brand mx-4 mb-3">
                     <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>PARENT</h3>
                 </a>
                 <div class="d-flex align-items-center ms-4 mb-4">
@@ -55,12 +55,12 @@
                         <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
                     </div>
                     <div class="ms-3">
-                        <h6 class="mb-0">Jhon Doe</h6>
-                        <span>Admin</span>
+                        <h6 class="mb-0">{{request.user}}</h6>
+<!--                        <span>Admin</span>-->
                     </div>
                 </div>
                 <div class="navbar-nav w-100">
-                    <a href="index.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
+                    <a href="{% url 'parent_home' %}" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
                         </i>Hostel Details</a>
@@ -106,15 +106,15 @@
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
-                        </i>Delete Account</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-                            <a href="{% url 'delete_account' %}" class="dropdown-item">Delete Account</a>
+<!--                    <div class="nav-item dropdown">-->
+<!--                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">-->
+<!--                        </i>Delete Account</a>-->
+<!--                        <div class="dropdown-menu bg-transparent border-0">-->
+<!--                            <a href="{% url 'delete_account' %}" class="dropdown-item">Delete Account</a>-->
 <!--                            <a href="typography.html" class="dropdown-item">View Hostel</a>-->
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
-                        </div>
-                    </div>
+<!--                        </div>-->
+<!--                    </div>-->
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
                         </i>Staff Details</a>
@@ -197,15 +197,15 @@
                 <a href="#" class="sidebar-toggler flex-shrink-0">
                     <i class="fa fa-bars"></i>
                 </a>
-                <form class="d-none d-md-flex ms-4">
-                    <input class="form-control border-0" type="search" placeholder="Search">
-                </form>
+<!--                <form class="d-none d-md-flex ms-4">-->
+<!--                    <input class="form-control border-0" type="search" placeholder="Search">-->
+<!--                </form>-->
                 <div class="navbar-nav align-items-center ms-auto">
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                            <i class="fa fa-envelope me-lg-2"></i>
-                            <span class="d-none d-lg-inline-flex">Message</span>
-                        </a>
+<!--                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">-->
+<!--                            <i class="fa fa-envelope me-lg-2"></i>-->
+<!--                            <span class="d-none d-lg-inline-flex">Message</span>-->
+<!--                        </a>-->
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
                             <a href="#" class="dropdown-item">
                                 <div class="d-flex align-items-center">
@@ -241,10 +241,10 @@
                         </div>
                     </div>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                            <i class="fa fa-bell me-lg-2"></i>
-                            <span class="d-none d-lg-inline-flex">Notificatin</span>
-                        </a>
+<!--                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">-->
+<!--                            <i class="fa fa-bell me-lg-2"></i>-->
+<!--                            <span class="d-none d-lg-inline-flex">Notificatin</span>-->
+<!--                        </a>-->
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
                             <a href="#" class="dropdown-item">
                                 <h6 class="fw-normal mb-0">Profile updated</h6>
@@ -270,7 +270,7 @@
                             <span class="d-none d-lg-inline-flex">{{request.user}}</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
-<!--                            <a href="#" class="dropdown-item">My Profile</a>-->
+                            <a href="{% url 'delete_account' %}" class="dropdown-item">Delete Account</a>
 <!--                            <a href="#" class="dropdown-item">Settings</a>-->
                             <a href="{% url 'logout' %}" class="dropdown-item">Log Out</a>
                         </div>
@@ -550,6 +550,7 @@
 
 
             <!-- Footer Start -->
+
             <div class="container-fluid pt-4 px-4">
                 <div class="bg-light rounded-top p-4">
                     <div class="row">
@@ -565,6 +566,7 @@
                     </div>
                 </div>
             </div>
+
             <!-- Footer End -->
         </div>
         <!-- Content End -->
