--- a/templates/student_temp/view_complaint.html
+++ b/templates/student_temp/view_complaint.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% extends 'admin_temp/admin_home.html' %}
+{% extends 'student_temp/student_home.html' %}
 {% block content %}
 {% load static %}
 
@@ -32,7 +32,7 @@
                     <td>
 									{% if i.reply == None %}
 
-									<a href="{% url 'reply_complaint' i.id %}"><button type="submit" class="btn btn-primary">Reply Now</button></a>
+									<p>no reply yet..</p>
 									{% else %}
 									{{i.reply}}
 									{% endif %}
