--- a/templates/admin_temp/reply_complaint.html
+++ b/templates/admin_temp/reply_complaint.html
@@ -28,12 +28,12 @@
 <!--                                </select>-->
 <!--                                <label for="floatingSelect">Works with selects</label>-->
 <!--                            </div>-->
-                            <div class="form-floating">
-                                <textarea class="form-control" placeholder="complaints"
-                                    id="floatingTextarea" style="height: 150px;" readonly value="{{c.complaint}}"></textarea>
-                                <label for="floatingTextarea">Complaint</label>
-                            </div>
-                                <br>
+<!--                            <div class="form-floating">-->
+<!--                                <textarea class="form-control" placeholder="complaints"-->
+<!--                                    id="floatingTextarea" style="height: 150px;" readonly value="{{c.complaint}}"></textarea>-->
+<!--                                <label for="floatingTextarea">Complaint</label>-->
+<!--                            </div>-->
+<!--                                <br>-->
 
                                 <div class="form-floating">
                                 <textarea class="form-control" placeholder="reply"
