--- a/templates/student_temp/view_profile.html
+++ b/templates/student_temp/view_profile.html
@@ -8,7 +8,7 @@
                             <h6 class="mb-4">Profile</h6>
                              {% for i in profile %}
                     <ul>
-                        <li><img class="rounded-circle me-lg-2" src="{{i.image.url}}" alt="" style="width: 40px; height: 40px;">
+                        <li><img class="rounded-circle me-lg-2" src="{{i.image.url}}" alt="" style="width: 40px; height: 40px;"></li>
 
                         <li>Name: {{i.name}}</li>
                         <li>Address: {{i.address}}</li>
@@ -22,7 +22,7 @@
 
                             <div class="col-sm-10">
                                 <a href="{% url 'profile_update' %}"><button type="submit" class="btn btn-primary">Update</button></a>
-                                <a href="{% url 'delete_student_profile' %}"><button type="submit" class="btn btn-danger">Delete</button></a>
+                                <a href="{% url 'delete_profile' %}"><button type="submit" class="btn btn-danger">Delete</button></a>
 
                             </div>
                             </form>
