--- a/templates/admin_temp/admin_dashboard.html
+++ b/templates/admin_temp/admin_dashboard.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
+{% extends 'admin_temp/admin_home.html' %}
+{% block content %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>welcome</title>
 </head>
 <body>
-<h1>WELCOME</h1>
+<h1>WELCOME TO ADMIN HOME</h1>
 
 </body>
 </html>
+{% endblock %}
