--- a/templates/admin_temp/mark_list.html
+++ b/templates/admin_temp/mark_list.html
@@ -11,8 +11,8 @@
                                     <div class="form-group">
                                         <label>Attendance</label>
                                     </div>
-                                    <input type="radio" name="attendance" value="present" required>P<br>
-                                    <input type="radio"name="attendance"value="absent"required>A
+                                    <input type="radio" name="attendance" value="present" required>Present<br>
+                                    <input type="radio"name="attendance"value="absent"required>Absent
                                     <br>
                             <div class="col-sm-10">
                                 <button type="submit" class="btn btn-primary">Submit</button>
