--- a/templates/admin_temp/view_parent.html
+++ b/templates/admin_temp/view_parent.html
@@ -12,7 +12,8 @@
                 <thead>
                 <tr>
 <!--                    <th scope="col">#</th>-->
-                    <th scope="col">Name</th>
+                    <th scope="col">Parent Name</th>
+                    <th scope="col">Student Name</th>
                     <th scope="col">Address</th>
                     <th scope="col">Contact_no</th>
                     <th scope="col">Email</th>
@@ -27,6 +28,7 @@
                 <tr>
 <!--                    <th scope="row">1</th>-->
                     <td>{{i.name}}</td>
+                    <td>{{i.child_name}}</td>
                     <td>{{i.address}}</td>
                     <td>{{i.contact_no}}</td>
                     <td>{{i.email}}</td>
