--- a/templates/admin_temp/admin_home.html
+++ b/templates/admin_temp/admin_home.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="navbar-nav w-100">
-                    <a href="{% url 'admin_home' %}" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
+                    <a href="{% url 'dashboard' %}" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
                         </i>Hostel Details</a>
@@ -102,7 +102,7 @@
                         </i>payment Details</a>
                         <div class="dropdown-menu bg-transparent border-0">
 <!--                            <a href="button.html" class="dropdown-item">Add Hostel</a>-->
-                            <a href="typography.html" class="dropdown-item">View Payments</a>
+                            <a href="{% url 'view_payment' %}" class="dropdown-item">View Payments</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
@@ -347,6 +347,7 @@
             <!-- Recent Sales Start -->
             <div class="container-fluid pt-4 px-4">
                 {% block content %}
+                <h1>WELCOME TO {{request.user}}</h1>
                 {% endblock %}
 <!--                <div class="bg-light text-center  p-4">-->
 
