--- a/templates/admin_temp/student_list.html
+++ b/templates/admin_temp/student_list.html
@@ -29,7 +29,7 @@
                 <tr>
                     <th scope="row">{{forloop.counter}}</th>
                     <td>{{i.name}}</td>
-                    <td><a href="{% url 'mark' i.user_id %}">mark</a> </td>
+                    <td><a href="{% url 'mark' i.user_id %}"><button class="btn-info">mark</button></a> </td>
 
                 </tr>
 <!--                <tr>-->
