--- a/templates/parent_temp/parent_home.html
+++ b/templates/parent_temp/parent_home.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="navbar-nav w-100">
-                    <a href="{% url 'parent_home' %}" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
+                    <a href="{% url 'dashboard1' %}" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
                         </i>Hostel Details</a>
@@ -115,13 +115,12 @@
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
 <!--                        </div>-->
 <!--                    </div>-->
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
-                        </i>Staff Details</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-                            <a href="{% url 'parentviewstaff' %}" class="dropdown-item">View Staff</a>
+<!--                    <div class="nav-item dropdown">-->
+<!--                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">-->
+<!--                        </i>Staff Details</a>-->
+<!--                        <div class="dropdown-menu bg-transparent border-0">-->
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
-                        </div>
+<!--                        </div>-->
                         <div class="nav-item dropdown">
 <!--                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">-->
 <!--                        </i>Manage Staff</a>-->
@@ -353,6 +352,7 @@
             <!-- Recent Sales Start -->
             <div class="container-fluid pt-4 px-4">
                 {% block content %}
+                <h1> WELCOME TO {{request.user}}</h1>
                 {% endblock %}
 <!--                <div class="bg-light text-center  p-4">-->
 
