--- a/templates/parent_temp/view_attendance.html
+++ b/templates/parent_temp/view_attendance.html
@@ -12,7 +12,7 @@
                 <thead>
                 <tr>
                     <th scope="col">SLNO</th>
-                    <th scope="col">Name</th>
+<!--                    <th scope="col">Name</th>-->
                     <th scope="col">Date</th>
                     <th scope="col">Attendance</th>
                     <th scope="col">Time</th>
@@ -23,7 +23,7 @@
                 {% for i in attendances %}
                 <tr>
                     <th scope="row">{{forloop.counter}}</th>
-                    <td>{{i.student.name}}</td>
+<!--                    <td>{{i.student.name}}</td>-->
                     <td>{{i.date}}</td>
                     <td>{{i.attendance}}</td>
                     <td>{{i.time}}</td>
