--- a/templates/about.html
+++ b/templates/about.html
@@ -79,9 +79,9 @@
                     <h1 class="display-3 text-white animated slideInDown">About Us</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">About</li>
+                            <li class="breadcrumb-item"><a class="text-white" href="">Home</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="#">About</a></li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">Contact</li>
                         </ol>
                     </nav>
                 </div>
@@ -98,36 +98,43 @@
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
-                            <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
-                            <h5 class="mb-3">Skilled Instructors</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <img class="img-fluid" src="{% static 'assets/img/hostel1.jpg' %}" alt="">
+<!--                            <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>-->
+<!--                            <h5 class="mb-3">Skilled Instructors</h5>-->
+<!--                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>-->
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
-                            <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-                            <h5 class="mb-3">Online Classes</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <img class="img-fluid" src="{% static 'assets/img/hostel1.jpg' %}" alt="">
+
+<!--                            <i class="fa fa-3x fa-globe text-primary mb-4"></i>-->
+<!--                            <h5 class="mb-3">Online Classes</h5>-->
+<!--                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>-->
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
-                            <i class="fa fa-3x fa-home text-primary mb-4"></i>
-                            <h5 class="mb-3">Home Projects</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <img class="img-fluid" src="{% static 'assets/img/hostel2.jpg' %}" alt="">
+
+<!--                            <i class="fa fa-3x fa-home text-primary mb-4"></i>-->
+<!--                            <h5 class="mb-3">Home Projects</h5>-->
+<!--                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>-->
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
-                            <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-                            <h5 class="mb-3">Book Library</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <img class="img-fluid" src="{% static 'assets/img/hostel1.jpg' %}" alt="">
+
+<!--                            <i class="fa fa-3x fa-book-open text-primary mb-4"></i>-->
+<!--                            <h5 class="mb-3">Book Library</h5>-->
+<!--                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>-->
                         </div>
                     </div>
                 </div>
@@ -143,35 +150,35 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="{% static 'assets/img/about.jpg' %}" alt="" style="object-fit: cover;">
+                        <img class="img-fluid position-absolute w-100 h-100" src="{% static 'assets/img/hostel3.jpg' %}" alt="" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">About Us</h6>
-                    <h1 class="mb-4">Welcome to eLEARNING</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                    <h1 class="mb-4">Welcome to Hostel</h1>
+                    <p class="mb-4">Students must keep the Campus & Rooms clean. Defacing walls, equipment, furniture etc., is strictly prohibited. </p>
+                    <p class="mb-4">Birthday/Other Celebrations are strictly prohibited in Hostel. Students must turn off all the electrical equipments & lights before leaving their rooms.</p>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Skilled Instructors</p>
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Smoking, Alcohol & Narcotic consumption is strictly prohibited in and around the Hostel premises. Strict action will be taken against offenders.</p>
                         </div>
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Online Classes</p>
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Late comers will be penalized.</p>
                         </div>
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>International Certificate</p>
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Birthday/Other Celebrations are strictly prohibited in Hostel.</p>
                         </div>
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Skilled Instructors</p>
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>The Management & Staff will not be responsible for personal belongings.</p>
                         </div>
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Online Classes</p>
+<!--                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Online Classes</p>-->
                         </div>
                         <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>International Certificate</p>
+<!--                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>International Certificate</p>-->
                         </div>
                     </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>
+<!--                    <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>-->
                 </div>
             </div>
         </div>
