--- a/templates/student_temp/student_home.html
+++ b/templates/student_temp/student_home.html
@@ -92,8 +92,8 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
                         </i>Fees Payment</a>
                         <div class="dropdown-menu bg-transparent border-0">
-<!--                            <a href="button.html" class="dropdown-item">Add Fees</a>-->
-                            <a href="typography.html" class="dropdown-item">Fee Details</a>
+                            <a href="{% url 'payment' %}" class="dropdown-item">Fee Details</a>
+                            <a href="{% url 'view_payments'  %}" class="dropdown-item">Payment Details</a>
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
                     </div>
