--- a/templates/admin_temp/view_payment.html
+++ b/templates/admin_temp/view_payment.html
@@ -16,6 +16,7 @@
                     <th scope="col">Paid_By</th>
                     <th scope="col">Paid_Date</th>
                     <th scope="col">Payment</th>
+                    <th scope="col">Status</th>
 
                 </tr>
                 </thead>
@@ -27,6 +28,7 @@
                     <td>{{i.paid_by}}</td>
                     <td>{{i.payment_date}}</td>
                     <td>{{i.payment}}</td>
+
 <!--                    <td>{{i.mess_bill}}</td>-->
 <!--                    <td>{{i.get_total}}</td>-->
 <!--                    <td><a href="{% url 'updatestaff' i.id %}"><button class="btn btn-success">Update</button> </a></td>-->
