--- a/templates/login.html
+++ b/templates/login.html
@@ -44,7 +44,9 @@
 
 
         <!-- Sign In Start -->
+
         <div class="container-fluid">
+
             <div class="row h-100 align-items-center justify-content-center" style="min-height: 100vh;">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
                     <div class="bg-light rounded p-4 p-sm-5 my-4 mx-3">
@@ -79,10 +81,12 @@
                 </div>
             </div>
         </div>
+                </div>
         <!-- Sign In End -->
     </div>
 
     <!-- JavaScript Libraries -->
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'assets1/lib/chart/chart.min.js' %}"></script>
