--- a/templates/student_temp/payment_status.html
+++ b/templates/student_temp/payment_status.html
@@ -47,8 +47,11 @@
                                     </div>
                                 </div>
                                  <div class="col-sm-10">
-                                <a href="{% url 'do_payment' payments.id %}"><button type="submit" class="btn btn-primary">pay</button></a>
-
+                                     {% if payments.status == False %}
+                                <a href="{% url 'do_payment' payments.id %}" class="btn btn-primary">pay</a>
+                              {% else %}
+                                     <button class="btn btn-success">Fee Paid</button>
+                                     {% endif %}
                             </div>
 
 
