--- a/templates/parent_temp/parent_home.html
+++ b/templates/parent_temp/parent_home.html
@@ -92,7 +92,7 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-th me-2">
                         </i>Payment Details</a>
                         <div class="dropdown-menu bg-transparent border-0">
-<!--                            <a href="{% url 'addfees' %}" class="dropdown-item">Add Fees</a>-->
+                            <a href="{% url 'view_payments' %}" class="dropdown-item">View Details</a>
 <!--                            <a href="{% url 'viewfees' %}" class="dropdown-item">View Fees</a>-->
 <!--                            <a href="element.html" class="dropdown-item">Other Elements</a>-->
                         </div>
