--- a/templates/student_temp/payment_details.html
+++ b/templates/student_temp/payment_details.html
@@ -29,7 +29,7 @@
                     <td>{{i.from_date}}</td>
                     <td>{{i.to_date}}</td>
                     <td>{{i.paid_by}}</td>
-                    <td>{{i.payment_date}}</td>
+                    <td>{{i.paid_date}}</td>
                     <td>{{i.payment}}</td>
 <!--                    <td>{{i.mess_bill}}</td>-->
 <!--                    <td>{{i.get_total}}</td>-->
